h1 not spacing in center. correct issue in css

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,3 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400);
+
+h1 { text-align: center;}
